--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="topsbeans.html">Top Beans</a>
+          <a class="nav-link" href="topsbean.html">Top Beans</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="buildabean.html"> Build A Bean</a>
