--- a/topsbean.html
+++ b/topsbean.html
@@ -28,5 +28,37 @@
           </ul>
         </div>
       </nav>
+    <div class="container">	     
+    <h2>Speed</h2>	      
+    <p class="title">Bean</p>	    
+    <p>Some text that describes me lorem ipsum ipsum lorem.</p>	        
+</div>
+
+<div class="column">
+    <div class="card">
+      <img src="./img/redbeans.jpg" alt="Red Beans" style="width:100%">
+      <div class="container">
+        <h2>Speed Bean</h2>
+        <p class="title">Speed</p>
+        <p>Beans</p>
+      </div>
+    </div>
+  </div>
+  
+<div class="container">	     
+    <h2>Strength</h2>	      
+    <p class="title">Bean</p>	    
+    <p>Some text that describes me lorem ipsum ipsum lorem.</p>	              
+</div>
+<div class="container">	     
+    <h2>Teleportation</h2>	      
+    <p class="title">Bean</p>	    
+    <p>Some text that describes me lorem ipsum ipsum lorem.</p>	            
+</div>
+<div class="container">	     
+    <h2>Mind</h2>	      
+    <p class="title">Bean</p>	    
+    <p>Some text that describes me lorem ipsum ipsum lorem.</p>	            
+</div>
 </body>
 </html>
