--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   <a onclick="initScroll('fifth'); return false;" href="#"> Go to fifth para</a>
 
   <div id="first"> first Para</div>
-  <div id="first"> second Para</div>
-  <div id="first"> third Para</div>
-  <div id="first"> fourth Para</div>
-  <div id="first"> fifth Para</div>
+  <div id="second"> second Para</div>
+  <div id="third"> third Para</div>
+  <div id="fourth"> fourth Para</div>
+  <div id="fifth"> fifth Para</div>
 </body>
 </html>
