--- a/step3.html
+++ b/step3.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="topsbean.html">Top Beans</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="buildabean.html"> Build A Bean</a>
+              <a class="nav-link" href="step1.html"> Build A Bean</a>
             </li>
             
            
@@ -35,12 +35,32 @@
         </div>
       </nav>
     <h1 class="text-center"> BUILD-A-BEAN</h1>
-    <div class="flexcontainer">
-    <div class="text-center">
-        <p> Pick Your Bean!</p>
+    <div class="container">
+    <div class="row">
+      <div class="col">
+        <p> Pick Your Super Power!</p>
+        <div class="card bg-dark text-black">
+            <img src="img/power1.jpg" class="card-img">
+            <div class="card-img-overlay">
+              <h5 class="card-title"> Flying </h5>
+              <p class="card-text"> ksdnfklnsdfjklsdnfljknsd
+                d;kfnlkdnvdjklfvnlkjdfnvkldsnvklddnvldkf
+              </p>
+              <p> dkjnfkdjcvnljkdnvlkdfnvklnfv
+                dslkcfnsdlnjhdsnjfcndc
+              </p>
+            </div>
+          </div>
     </div>
-    <div class="col-md-6 col-sm-12 text-center">
+    <div class="col text-center">
         <p> Pick Your Step!</p>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"><a href="step1.html"> Step 1</a></li>
+          <li class="list-group-item"><a href="step2.html"> Step 2</a></li>
+          <li class="list-group-item"><a href="step3.html"> Step 3</a></li>
+          <li class="list-group-item"> <a href="step4.html"> Step 4</a></li>
+        </ul>
+    </div>
     </div>
     </div>
 </body>
