--- a/topsbean.html
+++ b/topsbean.html
@@ -20,7 +20,7 @@
               <a class="nav-link" href="topsbean.html">Top Beans</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="buildabean.html"> Build A Bean</a>
+              <a class="nav-link" href="step1.html"> Build A Bean</a>
             </li>
             
            
