--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="public/js/script.js">
     <script type="text/javascript" src="public/js/script.js"> </script>
 </head>
 <body>
@@ -32,6 +33,7 @@
   <a onclick="initScroll('third'); return false;" href="#"> Go to third para</a>
   <a onclick="initScroll('fourth'); return false;" href="#"> Go to fourth para</a>
   <a onclick="initScroll('fifth'); return false;" href="#"> Go to fifth para</a>
+  <a onclick="toTop(); return false;" href= "#">Go to Top</a>
 
   <div id="first"> first Para</div>
   <div id="second"> second Para</div>
