--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="public/css/style.css">
-    <link rel="stylesheet" type="text/css" href="public/js/script.js">
-    <script type="text/javascript" src="public/js/script.js"> </script>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="javascript" href="script.js">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg">
@@ -28,17 +27,19 @@
       </ul>
     </div>
   </nav>
-  <a onclick="initScroll('first'); return false;" href="#"> Go to first para</a>
-  <a onclick="initScroll('second'); return false;" href="#"> Go to second para</a>
-  <a onclick="initScroll('third'); return false;" href="#"> Go to third para</a>
-  <a onclick="initScroll('fourth'); return false;" href="#"> Go to fourth para</a>
-  <a onclick="initScroll('fifth'); return false;" href="#"> Go to fifth para</a>
-  <a onclick="toTop(); return false;" href= "#">Go to Top</a>
+  <a onclick="initScroll('first'); return false;" href="#first"> Go to first para</a>
+  <a onclick="initScroll('second'); return false;" href="#second"> Go to second para</a>
+  <a onclick="initScroll('third'); return false;" href="#third"> Go to third para</a>
+  <a onclick="initScroll('fourth'); return false;" href="#fourth"> Go to fourth para</a>
+  <a onclick="initScroll('fifth'); return false;" href="#fifth"> Go to fifth para</a>
+  <a onclick="toTop('first'); return false;" href= "#first">Go to Top</a>
 
-  <div id="first"> first Para</div>
+  <div id="first"> <div id="blob"> </div></div>
   <div id="second"> second Para</div>
   <div id="third"> third Para</div>
   <div id="fourth"> fourth Para</div>
   <div id="fifth"> fifth Para</div>
+
+
 </body>
 </html>
