--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
   <a onclick="initScroll('fifth'); return false;" href="#fifth"> Go to fifth para</a>
   <a onclick="toTop('first'); return false;" href= "#first">Go to Top</a>
 
-  <div id="first"> <div id="blob"> </div></div>
+  <div id="first"> <div id="blob"> 
+    </div>
+</div>
   <div id="second"> second Para</div>
   <div id="third"> third Para</div>
   <div id="fourth"> fourth Para</div>
