--- a/step2.html
+++ b/step2.html
@@ -41,11 +41,11 @@
     <div class="container">
     <div class="row">
       <div class="col">
-        <p> Pick Your Color!</p>
-        <div class="card bg-dark text-black"> <a class="nextstep" href="step3.html">
-            <img src="img/color1.png" class="card-img">
+        <p> Pick Your Super Power!</p>
+        <div class="card bg-dark text-black"> <a class="nextstep" href="step4.html">
+            <img src="img/power1.jpg" class="card-img">
             <div class="card-img-overlay">
-              <h5 class="card-title"> Yellow </h5>
+              <h5 class="card-title"> Flying </h5>
               <p class="card-text"> ksdnfklnsdfjklsdnfljknsd
                 d;kfnlkdnvdjklfvnlkjdfnvkldsnvklddnvldkf
               </p>
