--- a/step3.html
+++ b/step3.html
@@ -41,11 +41,11 @@
     <div class="container">
     <div class="row">
       <div class="col">
-        <p> Pick Your Super Power!</p>
+        <p> Pick Your Time Length!</p>
         <div class="card bg-dark text-black"> <a class="nextstep" href="step4.html">
-            <img src="img/power1.jpg" class="card-img">
+            <img src="img/time1.PNG" class="card-img">
             <div class="card-img-overlay">
-              <h5 class="card-title"> Flying </h5>
+              <h5 class="card-title"> 30 </h5>
               <p class="card-text"> ksdnfklnsdfjklsdnfljknsd
                 d;kfnlkdnvdjklfvnlkjdfnvkldsnvklddnvldkf
               </p>
