--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <link rel="javascript" href="script.js">
 </head>
 <body>
+  <div id="back">
 <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="index.html"> <img class="logo" src="Media/Logo.jpg"></a>
+    <a class="navbar-brand" href="index.html"> <img class="logo" url="ph1.jpg"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon">♪♪♪</span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html"> Home <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="topsbean.html">Top Beans</a>
@@ -27,6 +28,7 @@
       </ul>
     </div>
   </nav>
+  </div>
   <a onclick="initScroll('first'); return false;" href="#first"> Go to first para</a>
   <a onclick="initScroll('second'); return false;" href="#second"> Go to second para</a>
   <a onclick="initScroll('third'); return false;" href="#third"> Go to third para</a>
@@ -35,10 +37,10 @@
   <a onclick="toTop('first'); return false;" href= "#first">Go to Top</a>
 
   <div id="first"> <div id="blob"> </div></div>
-  <div id="second"> second Para</div>
-  <div id="third"> third Para</div>
-  <div id="fourth"> fourth Para</div>
-  <div id="fifth"> fifth Para</div>
+  <div id="second">  <div id="blob2"> </div></div>
+  <div id="third">  <div id="blob3"> </div></div>
+  <div id="fourth"> <div id="blob4"> </div></div>
+  <div id="fifth">  <div id="blob5"> </div></div>
 
 
 </body>
