--- a/topsbean.html
+++ b/topsbean.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="content">
-    <h1>Top Beans</h1>
+    
 <!---Start Navigation-->
 <nav class="navbar navbar-expand-lg">
   <a class="navbar-brand" href="index.html"> </a>
@@ -38,88 +38,87 @@
 </nav>
 <!---End Navigation-->
 
-<div class="row">
-  <div class="column">
-    <div class="card">
-      <a href="login.html">
-        <img src="img/bluebean.jpg" >
-      </a>
-      <div class="container">
-        <h2>Flying</h2>
-        <p class="title">Speed</p>
-        <p>Beans</p>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="column">
-    <div class="card">
-      <a href="login.html">
-        <img src="img/bluebean.jpg" >
-      </a>
-      <div class="container">
-        <h2>Speed</h2>
-        <p class="title">Speed</p>
-        <p>Beans</p>
-      </div>
-    </div>
-  </div>
-</div>
+<h1>Top Beans</h1>
+
+<p> This is a list of our most popular beans.</p>
 
 <br>
 
-  <div class="row">
-    <div class="column">
-      <div class="card">
-        <a href="login.html">
-          <img src="img/pinkbean.jpg" >
-        </a>
-        <div class="container">
-          <h2>Mind</h2>
-          <p class="title">Speed</p>
-          <p>Beans</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="column">
-      <div class="card">
-        <a href="login.html">
-          <img src="img/bluebean.jpg" >
-        </a>
-        <div class="container">
-          <h2>Teleporting</h2>
-          <p class="title">Speed</p>
-          <p>Beans</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
+<div class="row">
   <div class="column">
     <div class="card">
       <a href="login.html">
-        <img src="img/bluebean.jpg" >
+        <img src="img/yellowbeans.jpg" >
       </a>
       <div class="container">
-        <h2>Strong</h2>
-        <p class="title">Speed</p>
-        <p>Beans</p>
+        <h2>Flying</h2>
+        <p>Durations</p>
+      </div>
+    </div>
+  </div>
+
+<br>
+
+
+  <div class="column">
+    <div class="card">
+      <a href="login.html">
+        <img src="img/bluebeans.jpg" >
+      </a>
+      <div class="container">
+        <h2>Speed</h2>
+        <p>Durations</p>
       </div>
     </div>
   </div>
 </div>
 
+<div class="space"></div>
+
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <a href="login.html">
+        <img src="img/purplebeans.jpg" >
+      </a>
+      <div class="container">
+        <h2>Strong</h2>
+        <p>Durations</p>
+      </div>
+    </div>
+  </div>
+
+  
+    <br>
 
 
+    <div class="column">
+      <div class="card">
+        <a href="login.html">
+          <img src="img/orangebeans.jpg" >
+        </a>
+        <div class="container">
+          <h2>Teleporting</h2>
+          <p>Durations</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <div class="space"></div>
 
-
-
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <a href="login.html">
+        <img src="img/pinkbeans.jpg" >
+      </a>
+      <div class="container">
+        <h2>Mind</h2>
+        <p>Durations</p>
+      </div>
+    </div>
+  </div>
 </div>
 </body>
 </html>
