--- a/topsbean.html
+++ b/topsbean.html
@@ -52,7 +52,20 @@
       </a>
       <div class="container">
         <h2>Flying</h2>
-        <p>Durations</p>
+        <p>The flying bean allows the consumer to fly for any of the following durations: </p>
+        <ul class="durations">
+          <li>30 minutes</li>
+          <li>1 hour</li>
+          <li>1 hour and 30 minutes</li>
+          <li>2 hours</li>
+          <li>2 hours and 30 minutes</li>
+          <li>3 hours</li>
+          <li>3 hours and 30 minutes</li>
+          <li>4 hours</li>
+          <li>4 hours and 30 minutes</li>
+          <li>5 hours</li>
+          <li>5 hours and 30 minutes</ li>
+        </ul>
       </div>
     </div>
   </div>
@@ -67,7 +80,20 @@
       </a>
       <div class="container">
         <h2>Speed</h2>
-        <p>Durations</p>
+        <p>The speed bean allows the consumer to have super speed for the following durations: </p>
+        <ul class="durations">
+          <li>30 minutes</li>
+          <li>1 hour</li>
+          <li>1 hour and 30 minutes</li>
+          <li>2 hours</li>
+          <li>2 hours and 30 minutes</li>
+          <li>3 hours</li>
+          <li>3 hours and 30 minutes</li>
+          <li>4 hours</li>
+          <li>4 hours and 30 minutes</li>
+          <li>5 hours</li>
+          <li>5 hours and 30 minutes</li>
+        </ul>
       </div>
     </div>
   </div>
@@ -83,7 +109,20 @@
       </a>
       <div class="container">
         <h2>Strong</h2>
-        <p>Durations</p>
+        <p>The strong bean allows the consumer to have super strength for the following durations: </p>
+        <ul class="durations">
+          <li>30 minutes</li>
+          <li>1 hour</li>
+          <li>1 hour and 30 minutes</li>
+          <li>2 hours</li>
+          <li>2 hours and 30 minutes</li>
+          <li>3 hours</li>
+          <li>3 hours and 30 minutes</li>
+          <li>4 hours</li>
+          <li>4 hours and 30 minutes</li>
+          <li>5 hours</li>
+          <li>5 hours and 30 minutes</li>
+        </ul>
       </div>
     </div>
   </div>
@@ -99,7 +138,20 @@
         </a>
         <div class="container">
           <h2>Teleporting</h2>
-          <p>Durations</p>
+          <p>The teleporting bean allows the consumer to teleport for the following durations: </p>
+          <ul class="durations">
+            <li>30 minutes</li>
+            <li>1 hour</li>
+            <li>1 hour and 30 minutes</li>
+            <li>2 hours</li>
+            <li>2 hours and 30 minutes</li>
+            <li>3 hours</li>
+            <li>3 hours and 30 minutes</li>
+            <li>4 hours</li>
+            <li>4 hours and 30 minutes</li>
+            <li>5 hours</li>
+            <li>5 hours and 30 minutes</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -115,7 +167,20 @@
       </a>
       <div class="container">
         <h2>Mind</h2>
-        <p>Durations</p>
+        <p>The mind bean allows the consumer to have  mind powers for the following durations: </p>
+        <ul class="durations">
+          <li>30 minutes</li>
+          <li>1 hour</li>
+          <li>1 hour and 30 minutes</li>
+          <li>2 hours</li>
+          <li>2 hours and 30 minutes</li>
+          <li>3 hours</li>
+          <li>3 hours and 30 minutes</li>
+          <li>4 hours</li>
+          <li>4 hours and 30 minutes</li>
+          <li>5 hours</li>
+          <li>5 hours and 30 minutes</li>
+        </ul>
       </div>
     </div>
   </div>
