--- a/step1.html
+++ b/step1.html
@@ -34,12 +34,12 @@
     </div>
   </nav>
     <h1 class=" section text-center"> BUILD-A-BEAN</h1>
-    <div class="container">
-    <div class="row">
+    <div class="container-fluid">
+    <div class="row no-gutters full-width-row">
       <div class="col">
         
         <p class="headings text-center"> Pick Your Color!</p>
-        <div class="col-6">
+        <div class="col-6 remove-all-margin">
         <div class="card bg-dark text-black"> <a class="nextstep" href="step2.html">
             <img src="img/color1.png" class="card-img">
             <div class="card-img-overlay">
@@ -55,7 +55,7 @@
         </div>
       </div>
           <br>
-          <div class="col-6">
+          <div class="col-6 remove-all-margin">
           <div class="card bg-dark text-black"> <a class="nextstep" href="step2.html">
             <img src="img/color1.png" class="card-img">
             <div class="card-img-overlay">
