--- a/index.html
+++ b/index.html
@@ -29,29 +29,28 @@
   <div id="second">  <div id="blob2"> </div></div>
   <div id="third">  <div id="blob3"> </div></div>
   <div id="fourth"> <div id="blob4"> </div></div>
-  <div id="fifth">   <a onclick="toTop('first'); return false;" href= "#first">Go to Top</a>
-    
-  <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="index.html"> </a>
-    <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="topsbean.html">Top Beans</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="step1.html"> Build A Bean</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="login.html"> Account</a>
-  </li>
+  <div id="fifth"> <div id="blob5"> </div></div>
+
+  
+    <div class="space"></div>
+      <div id="fifth">   <a onclick="toTop('first'); return false;" href= "#first">Go to Top</a>
+
+        <a class="navbar-brand" href="index.html"> </a>
+        <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>
+   
+
+        <a class="nav-link" href="topsbean.html">Top Beans</a>
+  
+  
+        <a class="nav-link" href="step1.html"> Build A Bean</a>
+  
+
+        <a class="nav-link" href="login.html"> Account</a>
+
+      </footer>
+
   
  
- 
-</ul>
-</div>
-</nav>
-    <div id="blob5"> </div> </div>
-
 
 </body>
 </html>
